# Test-script

./: README.md
C-source/: mutex.c
gdb/: cond.gdb  gfid.gdb  readdirp.gdb  test2.gdb  部署流程.txt
glusterfs/: delete-stale-gfid.py  fio.conf  gfid-to-file.sh  scan.sh
go/: MetaCheckLinux.go  MetaCheckWindows.go
go/raw/: aa  config.go  go.mod  my-copy.ini  raw.go
go/raw/xtao/: hello.css  hello.html
go/xftp/: Makefile  README  go.mod  main.go  replace.py  xftp.json
go/xftp/pkg-build/SPECS/: xftp.spec
go/xftp/rpm/: xftp.service
go/xftp/utils/: config.go  log.go
go/xtor/: Makefile  go.mod  go.sum  service.go
go/xtor/client/: auth.go  client.go  xtor.go
go/xtor/common/: CommonMessage.go  Encrypt.go  HmacAuth.go  Mntent.go  Utils.go  Xtor.go
go/xtor/conf/: xtorsvr.conf
go/xtor/rpm/: .gitignore  META  Makefile.am  autogen.sh  configure.ac  xtor-cli-1.8-eb19dc.x86_64.rpm  xtor-server-1.8-eb19dc.x86_64.rpm  xtor.spec
go/xtor/rpm/xtorcli/: Makefile.am
go/xtor/rpm/xtorsvr/: Makefile.am
go/xtor/server/: Routes.go  Server.go
go/xtor/systemd/: xtorsvr.service
mpi/: fsx-mpi  fsx-mpi.c  mpi-fuse.py  mpi-fuse1.py  mpi-fuse10.py  mpi-fuse2.py  mpi-fuse3.py  mpi-fuse4.py  mpi-fuse5.py  mpi-fuse6.py  mpi-fuse7.py  mpi-fuse8.py  mpi-fuse9.py  mpi.py  mpi10.py  mpi2.py  mpi3.py  mpi4.py  mpi5.py  mpi6.py  mpi7.py  mpi8.py  mpi9.py
python-script/: cmd_do.py  force-set-dirty.py  gfid-file-heal.py  gfid.py  gfid2.py  glfs_install.py  kill.py  my_test.py  paramiko_test.py
shell-script/: 1-delete-volume.sh  2-fdisk.sh  3-make-volume.sh  dd.sh  down-brick.sh  down_up_eth0.sh  heal.sh  kill.sh  km_disperse_volume.sh  make.sh  mk_disperse_volume.sh  mkdir.sh  mount.sh  scp-file.sh  ssh.sh  start_force.sh  thread.sh  touch_file.sh
(+11 files in other folders)
